@@ -22,11 +22,11 @@ public class SerialHandlerTest {
             System.out.println(data);
 
             JSONObject obj = new JSONObject();
-            obj.put("type", new Integer(1));
-            obj.put("x", new Integer(200));
-            obj.put("y", new Integer(300));
-            obj.put("num", new Integer(1));
-            obj.put("command", new Integer(6));
+            obj.put("type", Integer.valueOf(1));
+            obj.put("x", Integer.valueOf(200));
+            obj.put("y", Integer.valueOf(300));
+            obj.put("num", Integer.valueOf(1));
+            obj.put("command", Integer.valueOf(6));
 
             //JSONObject obj = db.getObjToSend();
             //serialHandler.sendData(obj);
